# telegram-send

./: .gitignore  Pipfile  README.md  pydocmd.yml  pyproject.toml  release.bash  requirements-dev.txt  run_tests.bash  search.js  setup.cfg  setup.py  telegram_send.html  telegram_send.py  version.py
.github/workflows/: docs.yml
docs/: index.html  search.js  telegram_send.html
examples/: apod.py
telegram_send/: __init__.py  telegram_send.py  utils.py
