[project]
name = "telegram-send"
dynamic = ["version"]
description = "Send messages and files over Telegram from the command-line."
readme = "README.md"
authors = [
    {name = "Rahiel Kasim", email = "rahielkasim@gmail.com"}
]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities"
]
keywords = ["telegram", "send", "message", "file"]
dependencies = [
    "colorama>=0.4.6 ; sys_platform == 'win32'",
    "platformdirs>=4.5.1",
    "python-telegram-bot==22.5",
]

[project.urls]
homepage = "https://github.com/rahiel/telegram-send"
issues = "https://github.com/rahiel/telegram-send/issues"
documentation = "https://rahiel.github.io/telegram-send/"

[project.scripts]
telegram-send = "telegram_send.telegram_send:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "telegram_send/version.py"

[tool.hatch.build.targets.wheel]
packages = ["telegram_send"]

[tool.flake8]
exclude = "build"
max-line-length = 120

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pdoc>=16.0.0",
    "ruff>=0.14.11",
]
